add role act
