# docs/swagger.yaml
@@ -528,6 +528,27 @@ paths:
       summary: 更新导航
       tags:
       - Navigation
+  /role/list:
+    get:
+      parameters:
+      - description: name
+        in: query
+        name: name
+        type: string
+      - description: page
+        in: query
+        name: page
+        type: integer
+      - description: page_size
+        in: query
+        name: page_size
+        type: integer
+      produces:
+      - application/json
+      responses: {}
+      summary: 角色列表
+      tags:
+      - Role
   /system/add:
     post:
       parameters:
